--- a/CTS/ServerIntance/ServerIntance.csproj
+++ b/CTS/ServerIntance/ServerIntance.csproj
@@ -34,9 +34,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\RACL\External Dependencies\Microsoft\EntityFramework\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework">
+      <HintPath>..\External Dependencies\Microsoft\EntityFramework\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\External Dependencies\Microsoft\EntityFramework\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\External Dependencies\Microsoft\Practices\CommonServiceLocator.1.0\NET\Microsoft.Practices.ServiceLocation.dll</HintPath>
